solc_ossfuzz_seed_corpus/test_sol/test_7c1ab0296ae5dfa6f0f449c926869a0a207ad3f07b121a0271715cb2dd27c2fb_8d1c1fe5b7302b73e101732d04940cf15b0b0437_sol.sol
==== Source:  ====

==== Source: su0.sol ====

==== Source: su1.sol ====
contract C0 {
  function f0(bytes21 i0) external returns(bytes17 o0)
  {

  }
  function f1(bytes23 i0) external
  { }
}
function f2(function () external i0,bytes27 i1,bytes memory i2) 
{ }
function f3(bytes29 i0)  returns(int240 o0,int192 o1,C0 o2)
{
  o0 = -(((179385345287209860393198450237902619914700128552930837656731704912777529 + -502024741906018363543081230887580414661641004344775618985709205802800935) / 143498220021709058030374094203310227701357281256984932370390758065307411));
}
pragma abicoder v1;
pragma solidity >= 0.0.0;
// ----
// TypeError 2326: (su1.sol:259-489): Type rational_const 3226...(64 digits omitted)...3406 / 1434...(64 digits omitted)...7411 is not implicitly convertible to expected type int240. Try converting to type ufixed256x76 or use an explicit conversion.
